// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@xstate/graph getPathFromEvents() should return a path to the last entered state by the event sequence: path from events 1`] = `
{
  "state": {
    "red": "flashing",
  },
  "steps": [
    {
      "eventType": "xstate.init",
      "state": "green",
    },
    {
      "eventType": "TIMER",
      "state": "yellow",
    },
    {
      "eventType": "TIMER",
      "state": {
        "red": "walk",
      },
    },
    {
      "eventType": "TIMER",
      "state": "green",
    },
    {
      "eventType": "POWER_OUTAGE",
      "state": {
        "red": "flashing",
      },
    },
  ],
}
`;

exports[`@xstate/graph getShortestPaths() should return a mapping of shortest paths to all states (parallel): shortest paths parallel 1`] = `
[
  {
    "state": {
      "a": "a1",
      "b": "b1",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a2",
      "b": "b2",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
      {
        "eventType": "2",
        "state": {
          "a": "a2",
          "b": "b2",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a3",
      "b": "b3",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
      {
        "eventType": "3",
        "state": {
          "a": "a3",
          "b": "b3",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getShortestPaths() should return a mapping of shortest paths to all states: shortest paths 1`] = `
[
  {
    "state": "green",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
    ],
  },
  {
    "state": "yellow",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "flashing",
        },
      },
    ],
  },
  {
    "state": {
      "red": "walk",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
    ],
  },
  {
    "state": {
      "red": "wait",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
    ],
  },
  {
    "state": {
      "red": "stop",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "stop",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return a mapping of arrays of simple paths to all states 2`] = `
[
  {
    "state": "green",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
    ],
  },
  {
    "state": "yellow",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "flashing",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "flashing",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "stop",
        },
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "flashing",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "flashing",
        },
      },
    ],
  },
  {
    "state": {
      "red": "flashing",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "POWER_OUTAGE",
        "state": {
          "red": "flashing",
        },
      },
    ],
  },
  {
    "state": {
      "red": "walk",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
    ],
  },
  {
    "state": {
      "red": "wait",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
    ],
  },
  {
    "state": {
      "red": "stop",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "green",
      },
      {
        "eventType": "TIMER",
        "state": "yellow",
      },
      {
        "eventType": "TIMER",
        "state": {
          "red": "walk",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "wait",
        },
      },
      {
        "eventType": "PED_COUNTDOWN",
        "state": {
          "red": "stop",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return a mapping of simple paths to all states (parallel): simple paths parallel 1`] = `
[
  {
    "state": {
      "a": "a1",
      "b": "b1",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a2",
      "b": "b2",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
      {
        "eventType": "2",
        "state": {
          "a": "a2",
          "b": "b2",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a3",
      "b": "b3",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
      {
        "eventType": "2",
        "state": {
          "a": "a2",
          "b": "b2",
        },
      },
      {
        "eventType": "3",
        "state": {
          "a": "a3",
          "b": "b3",
        },
      },
    ],
  },
  {
    "state": {
      "a": "a3",
      "b": "b3",
    },
    "steps": [
      {
        "eventType": "xstate.init",
        "state": {
          "a": "a1",
          "b": "b1",
        },
      },
      {
        "eventType": "3",
        "state": {
          "a": "a3",
          "b": "b3",
        },
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return multiple paths for equivalent transitions: simple paths equal transitions 1`] = `
[
  {
    "state": "a",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "a",
      },
    ],
  },
  {
    "state": "b",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "a",
      },
      {
        "eventType": "FOO",
        "state": "b",
      },
    ],
  },
  {
    "state": "b",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "a",
      },
      {
        "eventType": "BAR",
        "state": "b",
      },
    ],
  },
]
`;

exports[`@xstate/graph getSimplePaths() should return value-based paths: simple paths context 1`] = `
[
  {
    "state": "start",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "start",
      },
    ],
  },
  {
    "state": "start",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
    ],
  },
  {
    "state": "start",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
    ],
  },
  {
    "state": "finish",
    "steps": [
      {
        "eventType": "xstate.init",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "start",
      },
      {
        "eventType": "INC",
        "state": "finish",
      },
    ],
  },
]
`;

exports[`@xstate/graph toDirectedGraph should represent a statechart as a directed graph 1`] = `
{
  "children": [
    {
      "children": [],
      "edges": [
        {
          "label": {
            "text": "TIMER",
          },
          "source": "light.green",
          "target": "light.yellow",
        },
      ],
      "id": "light.green",
    },
    {
      "children": [],
      "edges": [
        {
          "label": {
            "text": "TIMER",
          },
          "source": "light.yellow",
          "target": "light.red",
        },
      ],
      "id": "light.yellow",
    },
    {
      "children": [
        {
          "children": [],
          "edges": [
            {
              "label": {
                "text": "COUNTDOWN",
              },
              "source": "light.red.walk",
              "target": "light.red.wait",
            },
          ],
          "id": "light.red.walk",
        },
        {
          "children": [],
          "edges": [
            {
              "label": {
                "text": "COUNTDOWN",
              },
              "source": "light.red.wait",
              "target": "light.red.stop",
            },
          ],
          "id": "light.red.wait",
        },
        {
          "children": [],
          "edges": [
            {
              "label": {
                "text": "COUNTDOWN",
              },
              "source": "light.red.stop",
              "target": "light.red.finished",
            },
          ],
          "id": "light.red.stop",
        },
        {
          "children": [],
          "edges": [],
          "id": "light.red.finished",
        },
      ],
      "edges": [
        {
          "label": {
            "text": "xstate.done.state.light.red",
          },
          "source": "light.red",
          "target": "light.green",
        },
      ],
      "id": "light.red",
    },
  ],
  "edges": [],
  "id": "light",
}
`;

exports[`shortest paths for transition functions 1`] = `
[
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
    ],
  },
]
`;

exports[`simple paths for transition functions 1`] = `
[
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
    ],
  },
  {
    "state": 1,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "b",
        "state": 0,
      },
    ],
  },
  {
    "state": 0,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "reset",
        "state": 0,
      },
    ],
  },
  {
    "state": 2,
    "steps": [
      {
        "eventType": "xstate.init",
        "state": 0,
      },
      {
        "eventType": "a",
        "state": 1,
      },
      {
        "eventType": "b",
        "state": 2,
      },
    ],
  },
]
`;
